--- a/src/javascript.html
+++ b/src/javascript.html
@@ -41,7 +41,16 @@ limitations under the License.
         upcomingClassesData: [],
         upcomingClassesGrid: null,
         hasUpcomingClassesData: false,
+        balance: 0,
       };
+    },
+    computed: {
+      formattedBalance() {
+        return this.balance.toLocaleString('en-us', {
+          style: 'currency',
+          currency: 'USD',
+        });
+      },
     },
     created() {
       // fetch on init
@@ -146,7 +155,7 @@ limitations under the License.
                 reject('Failed to get data');
               })
               .withSuccessHandler(sheetData => {
-                resolve(Array.from(sheetData));
+                resolve(sheetData);
               })
               [appScriptFunctionName](this.selectedFamily);
           });
@@ -155,27 +164,32 @@ limitations under the License.
         if (this.selectedFamily) {
           this.recentAttendanceGrid
             .updateConfig({
-              data: () => getSheetData('getRecentAttendanceByFamily'),
+              data: () =>
+                getSheetData('getRecentAttendanceByFamily').then(Array.from),
             })
             .forceRender();
 
           this.additionalFeesGrid
             .updateConfig({
-              data: () => getSheetData('getAdditionalFees'),
+              data: () => getSheetData('getAdditionalFees').then(Array.from),
             })
             .forceRender();
 
           this.recentPaymentGrid
             .updateConfig({
-              data: () => getSheetData('getRecentPaymentsByFamily'),
+              data: () =>
+                getSheetData('getRecentPaymentsByFamily').then(Array.from),
             })
             .forceRender();
 
           this.upcomingClassesGrid
             .updateConfig({
-              data: () => getSheetData('getUpcomingClassesByFamily'),
+              data: () =>
+                getSheetData('getUpcomingClassesByFamily').then(Array.from),
             })
             .forceRender();
+
+          getSheetData('getBalance').then(balance => (this.balance = balance));
         }
       },
     },
@@ -215,10 +229,27 @@ limitations under the License.
       <h2>Recent Payments</h2>
       <div id="recent-payments-table"></div>
     </div>
+    <div class="family-details__balance">
+      <h2>Balance Info</h2>
+      <div v-if="balance <= 0">
+        <h4>You have a credit of: {{ formattedBalance }}</h4>
+        <p>
+          <em>
+            A negative balance reflects a credit on your account. Please ensure
+            that this credit is sufficient to cover the remaining classes for
+            the month. If additional payment is needed, kindly settle the
+            outstanding balance at your earliest convenience.
+          </em>
+        </p>
+      </div>
+      <div v-if="balance > 0">
+        <h4>You have a balance due of: {{ formattedBalance }}</h4>
+        <p><em>Please pay this balance immediately.</em></p>
+      </div>
+    </div>
     <div class="family-details__upcoming-classes">
       <h2>Upcoming Classes</h2>
       <div id="upcoming-classes-table"></div>
     </div>
-    <div class="family-details__balance"></div>
   </section>
 </template>
