feat: conditionally show the balance section

--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -99,4 +99,8 @@ limitations under the License.
   .spacer-30 {
     margin-bottom: 30px;
   }
+
+  .balance-note {
+    font-style: italic;
+  }
 </style>
