--- a/src/javascript.html
+++ b/src/javascript.html
@@ -42,6 +42,7 @@ limitations under the License.
         upcomingClassesGrid: null,
         hasUpcomingClassesData: false,
         balance: 0,
+        hasBalanceData: false,
       };
     },
     computed: {
@@ -147,6 +148,7 @@ limitations under the License.
         this.hasRecentAttendanceData = false;
         this.hasRecentPaymentData = false;
         this.hasUpcomingClassesData = false;
+        this.hasBalanceData = false;
 
         const getSheetData = async appScriptFunctionName => {
           return new Promise((resolve, reject) => {
@@ -189,7 +191,10 @@ limitations under the License.
             })
             .forceRender();
 
-          getSheetData('getBalance').then(balance => (this.balance = balance));
+          getSheetData('getBalance').then(balance => {
+            this.balance = balance;
+            this.hasBalanceData = true;
+          });
         }
       },
     },
@@ -229,27 +234,31 @@ limitations under the License.
       <h2>Recent Payments</h2>
       <div id="recent-payments-table"></div>
     </div>
-    <div class="family-details__balance">
-      <h2>Balance Info</h2>
-      <div v-if="balance <= 0">
-        <h4>You have a credit of: {{ formattedBalance }}</h4>
-        <p>
-          <em>
+    <div v-show="hasBalanceData">
+      <div class="family-details__balance">
+        <h2>Balance Info</h2>
+        <div v-if="balance <= 0">
+          <h4>You have a credit of: {{ formattedBalance }}</h4>
+          <p class="balance-note">
             A negative balance reflects a credit on your account. Please ensure
             that this credit is sufficient to cover the remaining classes for
             the month. If additional payment is needed, kindly settle the
             outstanding balance at your earliest convenience.
-          </em>
-        </p>
+          </p>
+        </div>
+        <div v-if="balance > 0">
+          <h4>You have a balance due of: {{ formattedBalance }}</h4>
+          <p class="balance-note">
+            Kindly settle this balance at your earliest convenience. If there
+            are any upcoming classes this month not yet covered, please include
+            the corresponding amount in your payment.
+          </p>
+        </div>
       </div>
-      <div v-if="balance > 0">
-        <h4>You have a balance due of: {{ formattedBalance }}</h4>
-        <p><em>Please pay this balance immediately.</em></p>
+      <div class="family-details__upcoming-classes">
+        <h2>Upcoming Classes</h2>
+        <div id="upcoming-classes-table"></div>
       </div>
-    </div>
-    <div class="family-details__upcoming-classes">
-      <h2>Upcoming Classes</h2>
-      <div id="upcoming-classes-table"></div>
     </div>
   </section>
 </template>
