chore: update license year

--- a/src/javascript.html
+++ b/src/javascript.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2024 Elevation Beats Inc
+Copyright 2025 Elevation Beats Inc
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -16,8 +16,8 @@ limitations under the License.
 <script type="importmap">
   {
     "imports": {
-      "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.prod.js",
-      "gridjs": "https://unpkg.com/gridjs?module"
+      "vue": "https://unpkg.com/vue@3.5.13/dist/vue.esm-browser.prod.js",
+      "gridjs": "https://unpkg.com/gridjs@6.2.0/dist/gridjs.module.js?module"
     }
   }
 </script>
