chore: switch CDN to jsdelivr

--- a/src/javascript.html
+++ b/src/javascript.html
@@ -16,8 +16,8 @@ limitations under the License.
 <script type="importmap">
   {
     "imports": {
-      "vue": "https://unpkg.com/vue@3.5.13/dist/vue.esm-browser.prod.js",
-      "gridjs": "https://unpkg.com/gridjs@6.2.0/dist/gridjs.module.js?module"
+      "vue": "https://cdn.jsdelivr.net/npm/gridjs@6.2.0/+esm",
+      "gridjs": "https://cdn.jsdelivr.net/npm/gridjs@6.2.0/+esm"
     }
   }
 </script>
