--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -107,4 +107,18 @@ limitations under the License.
   .balance-note {
     font-style: italic;
   }
+
+  table.eb-table {
+    border: 3px solid #ccc;
+  }
+  
+  th.eb-table__th {
+    background-color: #D39CA1;
+    color: #010101;
+    border-bottom: 3px solid #ccc;
+  }
+
+  .color-red {
+    color: red;
+  }
 </style>
