feat: heading copy update

--- a/src/javascript.html
+++ b/src/javascript.html
@@ -271,7 +271,7 @@ limitations under the License.
     </div>
   </section>
   <section class="family-details-container">
-    <h2>Amount owed per month</h2>
+    <h2>Amount owed on first of every month</h2>
     <p>
       Please note: the total for each month
       <strong
