feat: calculate balance as min of values; accordion for sections

--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -121,4 +121,8 @@ limitations under the License.
   .color-red {
     color: red;
   }
+
+  summary > h2 {
+    display: inline-block;
+  }
 </style>
