--- a/src/javascript.html
+++ b/src/javascript.html
@@ -300,25 +300,41 @@ limitations under the License.
       </div>
     </div>
     <div class="family-details__additional-fees">
-      <h2>Additional Fees</h2>
-      <small>
-        This section will show all late fees, referral credits and any
-        additional charges. All credits accumulated will be refunded at the end
-        of the semester.
-      </small>
-      <div id="additional-fees-table"></div>
+      <details>
+        <summary>
+          <h2>Additional Fees</h2>
+        </summary>
+        <small>
+          This section will show all late fees, referral credits and any
+          additional charges. All credits accumulated will be refunded at the end
+          of the semester.
+        </small>
+        <div id="additional-fees-table"></div>
+      </details>
     </div>
     <div class="family-details__recent-attendance">
-      <h2>Recent Attendance</h2>
-      <div id="recent-attendance-table"></div>
+      <details>
+        <summary>
+          <h2>Recent Attendance</h2>
+        </summary>
+        <div id="recent-attendance-table"></div>
+      </details>
     </div>
     <div class="family-details__recent-payments">
-      <h2>Recent Payments</h2>
-      <div id="recent-payments-table"></div>
+      <details>
+        <summary>
+          <h2>Recent Payments</h2>
+        </summary>
+        <div id="recent-payments-table"></div>
+      </details>
     </div>
     <div class="family-details__upcoming-classes">
-      <h2>Upcoming Classes</h2>
-      <div id="upcoming-classes-table"></div>
+      <details>
+        <summary>
+          <h2>Upcoming Classes</h2>
+        </summary>
+        <div id="upcoming-classes-table"></div>
+      </details>
     </div>
   </section>
 </template>
