--- a/src/stylesheet.html
+++ b/src/stylesheet.html
@@ -125,4 +125,9 @@ limitations under the License.
   summary > h2 {
     display: inline-block;
   }
+
+  .family-details__credit-breakdown-list {
+    list-style: none;
+    padding: 0 1em;
+  }
 </style>
